--- a/Fractal-Creator.vcxproj
+++ b/Fractal-Creator.vcxproj
@@ -139,7 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BitmapFileHeader.cpp" />
+    <ClCompile Include="BitmapInfoHeader.cpp" />
     <ClCompile Include="Fractal-Creator.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BitmapFileHeader.h" />
+    <ClInclude Include="BitmapInfoHeader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
