--- a/Fractal-Creator.vcxproj
+++ b/Fractal-Creator.vcxproj
@@ -139,11 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BitmapFileHeader.cpp" />
-    <ClCompile Include="BitmapInfoHeader.cpp" />
+    <ClCompile Include="Bitmap.cpp" />
     <ClCompile Include="Fractal-Creator.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bitmap.h" />
     <ClInclude Include="BitmapFileHeader.h" />
     <ClInclude Include="BitmapInfoHeader.h" />
   </ItemGroup>
